--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Arditti93/m40mongoose#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "mongoose": "^6.5.2",
+    "nodemon": "^2.0.19",
     "yargs": "^17.5.1"
   }
 }
